[gd_scene load_steps=13 format=2]

[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/Arcade/Scripts/HUD_00_VBox_In_Game_Over.gd" type="Script" id=2]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Player_End_VS_Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://misc/line-text-kinda_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Kill_W_Weap_End_Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Kill_By_Weap_End_Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Killed_By_Who_End_Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Killed_Who_End_Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Distance_Traveled_Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Other_Input_Stats.tscn" type="PackedScene" id=11]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Damage_Stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://Menus/Arcade/Parts/End_Stats/Power_Up_Stats.tscn" type="PackedScene" id=13]

[node name="VBox_Game_Over" type="VBoxContainer"]
margin_right = 184.0
margin_bottom = 759.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="HBox_Player" type="HBoxContainer" parent="."]
margin_right = 198.0
margin_bottom = 37.0
alignment = 1

[node name="Label_Player_Text" type="Label" parent="HBox_Player"]
margin_left = 17.0
margin_right = 157.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Player "
align = 1

[node name="Label_Player_Count" type="Label" parent="HBox_Player"]
margin_left = 161.0
margin_right = 181.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="HBox_Coin" type="HBoxContainer" parent="."]
visible = false
margin_top = 41.0
margin_right = 184.0
margin_bottom = 78.0
alignment = 1

[node name="Label_Coin_Text_1" type="Label" parent="HBox_Coin"]
margin_left = 23.0
margin_right = 122.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Coin ["
align = 1

[node name="Label_Coin_Count" type="Label" parent="HBox_Coin"]
margin_left = 126.0
margin_right = 146.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1

[node name="Label_Coin_Text_2" type="Label" parent="HBox_Coin"]
margin_left = 150.0
margin_right = 161.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "]"
align = 1

[node name="Label_Done" type="Label" parent="."]
margin_top = 41.0
margin_right = 198.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "done"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 82.0
margin_right = 198.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 86.0
margin_right = 198.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 90.0
margin_right = 198.0
margin_bottom = 760.0
rect_min_size = Vector2( 0, 670 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 186.0
margin_bottom = 731.0

[node name="Player_End_VS_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_right = 184.0
margin_bottom = 661.0

[node name="Kill_W_Weap_End_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 5 )]
visible = false
margin_top = 0.0
margin_right = 186.0

[node name="Kill_By_Weap_End_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_top = 0.0
margin_right = 186.0

[node name="Killed_Who_End_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 0.0
margin_right = 186.0

[node name="Killed_By_Who_End_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 109.0
margin_right = 186.0
margin_bottom = 214.0

[node name="Distance_Traveled_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 218.0
margin_right = 186.0
margin_bottom = 323.0

[node name="Other_Input_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 11 )]
margin_top = 327.0
margin_right = 186.0
margin_bottom = 432.0

[node name="Damage_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 12 )]
margin_top = 436.0
margin_right = 186.0
margin_bottom = 514.0

[node name="Power_Up_Stats" parent="ScrollContainer/VBoxContainer" instance=ExtResource( 13 )]
margin_top = 518.0
margin_right = 186.0
margin_bottom = 596.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 600.0
margin_right = 186.0
margin_bottom = 731.0
rect_min_size = Vector2( 184, 0 )

[node name="HBox_Space_05" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 37.0
alignment = 1

[node name="Label_Player_Text" type="Label" parent="ScrollContainer/VBoxContainer/VBoxContainer/HBox_Space_05"]
margin_left = 93.0
margin_right = 93.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
align = 1

[node name="Awards_Text" type="Label" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 186.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "Awards"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 186.0
margin_bottom = 131.0

[node name="Award_Text_00" type="Label" parent="ScrollContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 4 )
text = "least likely
to succeed"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_top = 764.0
margin_right = 198.0
margin_bottom = 764.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="."]
margin_top = 768.0
margin_right = 198.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
